--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "react": "16.9.0",
         "react-dom": "16.9.0",
+        "react-mic": "^12.4.1",
         "react-scripts": "3.1.2"
     },
     "devDependencies": {
