--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
         "react": "16.9.0",
         "react-dom": "16.9.0",
         "react-intl": "3.3.0",
-        "react-mic": "^12.4.1",
+        "react-mic": "12.4.1",
         "react-scripts": "3.1.2",
-        "soundex": "^0.2.1"
+        "soundex": "0.2.1"
     },
     "devDependencies": {
         "flow-bin": "0.107.0"
