--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "bootstrap": "^4.3.1",
+        "material-design-icons": "^3.0.1",
         "react": "16.9.0",
         "react-bootstrap": "^1.0.0-beta.14",
         "react-dom": "16.9.0",
