--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,7 +21,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Versions
         run: |
+          echo Node:
           node --version
+          echo NPM:
           npm --version
       - name: NPM install (ci)
         run: npm ci
