--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,6 +28,8 @@ jobs:
           node --version
           echo NPM:
           npm --version
+      - name: NPM audit
+        run: npm audit
       - name: NPM install (ci)
         run: npm ci
       - name: Build
