C2LC-38: Add CD pipeline to Firebase hosting

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,7 +34,25 @@ jobs:
         run: npm ci
       - name: Build
         run: npm run build
+      - name: Archive artifact
+        uses: actions/upload-artifact@v1
+        with:
+          name: build
+          path: build
       - name: Flow
         run: npx flow
       - name: Test
         run: npm test
+  deploy:
+    name: Deploy
+    needs: build
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/download-artifact@v1
+        with:
+          name: build
+      - uses: w9jds/firebase-action@v1.1.0
+        with:
+          args: deploy
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
