--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,6 +48,9 @@ jobs:
     needs: build
     runs-on: ubuntu-18.04
     steps:
+      - uses: actions/checkout@v1
+        with:
+          fetch-depth: 1
       - uses: actions/download-artifact@v1
         with:
           name: build
