C2LC-101: Change title to 'Inclusive Coding Environment'

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "C2LC Coding Environment",
-    "short_name": "C2LC Coding Environment",
+    "name": "Inclusive Coding Environment",
+    "short_name": "Inclusive Coding Environment",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#ffffff",
