--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,8 +43,8 @@ jobs:
         with:
           name: ${{ format('build-{0}', matrix.node-version) }}
           path: build
-  deploy:
-    name: Deploy
+  deploy-master:
+    name: Deploy master
     needs: build
     runs-on: ubuntu-18.04
     if: (github.repository == 'codelearncreate/c2lc-coding-environment') && (github.ref == 'refs/heads/master') && (github.event_name == 'push')
