C2LC-157: CI build on Windows and Mac
In addition to Ubuntu.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,9 +6,10 @@ jobs:
 
   build:
     name: Build
-    runs-on: ubuntu-18.04
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [ubuntu-18.04, windows-latest, macos-latest]
         node-version: [10.x, 12.x]
     env:
       CI: true
@@ -37,9 +38,10 @@ jobs:
       - name: Test
         run: npm test
       - name: Archive build artifact
+        if: (matrix.os == 'ubuntu-18.04') && (matrix.node-version == '10.x')
         uses: actions/upload-artifact@v1
         with:
-          name: ${{ format('build-{0}', matrix.node-version) }}
+          name: ${{ format('build-{0}-node-{1}', matrix.os, matrix.node-version) }}
           path: build
 
   deploy-master:
@@ -53,7 +55,7 @@ jobs:
           fetch-depth: 1
       - uses: actions/download-artifact@v1
         with:
-          name: build-10.x
+          name: build-ubuntu-18.04-node-10.x
           path: build
       - uses: w9jds/firebase-action@v1.1.0
         with:
