--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,8 +26,7 @@ jobs:
           node --version
           echo NPM:
           npm --version
-      - name: NPM audit NOTE TEMPORARILY WILL NOT FAIL BUILDS
-        continue-on-error: true # Allow DoS node-sass vulnerability https://npmjs.com/advisories/961
+      - name: NPM audit
         run: npm audit
       - name: NPM install (ci)
         run: npm ci
