C2LC-163: Add typeface-roboto module

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "react-intl": "3.3.0",
         "react-mic": "12.4.1",
         "react-scripts": "3.3.0",
-        "soundex": "0.2.1"
+        "soundex": "0.2.1",
+        "typeface-roboto": "0.0.75"
     },
     "devDependencies": {
         "flow-bin": "0.116.1"
