--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,6 +27,7 @@ jobs:
           echo NPM:
           npm --version
       - name: NPM audit
+        continue-on-error: true
         run: npm audit
       - name: NPM install (ci)
         run: npm ci
