--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,11 +6,11 @@ jobs:
 
   build:
     name: Build
-    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-18.04, windows-latest, macos-latest]
+        os: [ubuntu-18.04]
         node-version: [10.x, 12.x]
+    runs-on: ${{ matrix.os }}
     env:
       CI: true
     steps:
@@ -37,28 +37,3 @@ jobs:
         run: npx flow
       - name: Test
         run: npm test -- --verbose
-      - name: Archive build artifact
-        if: (matrix.os == 'ubuntu-18.04') && (matrix.node-version == '10.x')
-        uses: actions/upload-artifact@v1
-        with:
-          name: ${{ format('build-{0}-node-{1}', matrix.os, matrix.node-version) }}
-          path: build
-
-  deploy-master:
-    name: Deploy master
-    needs: build
-    runs-on: ubuntu-18.04
-    if: (github.repository == 'codelearncreate/c2lc-coding-environment') && (github.ref == 'refs/heads/master') && (github.event_name == 'push')
-    steps:
-      - uses: actions/checkout@v1
-        with:
-          fetch-depth: 1
-      - uses: actions/download-artifact@v1
-        with:
-          name: build-ubuntu-18.04-node-10.x
-          path: build
-      - uses: w9jds/firebase-action@v1.1.0
-        with:
-          args: deploy
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
