--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
-        "extends": "react-app"
+        "extends": "react-app",
+        "ignorePatterns": ["src/vendor/"]
     },
     "browserslist": {
         "production": [
