--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     },
     "eslintConfig": {
         "extends": "react-app",
-        "ignorePatterns": ["src/vendor/"]
+        "ignorePatterns": [
+            "src/vendor/"
+        ]
     },
     "browserslist": {
         "production": [
