--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "c2lc-coding-environment",
-    "version": "0.3.0",
+    "version": "0.4.0-dev",
     "private": true,
     "dependencies": {
         "bootstrap": "4.3.1",
