C2LC-223: Added linting rules and fixed failures revealed.   Added linting to CI.

--- a/package.json
+++ b/package.json
@@ -30,7 +30,12 @@
         "extends": "react-app",
         "ignorePatterns": [
             "src/vendor/"
-        ]
+        ],
+        "rules": {
+            "no-unused-vars": "error",
+            "no-var": "error",
+            "prefer-const": "error"
+        }
     },
     "browserslist": {
         "production": [
