--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,3 +37,5 @@ jobs:
         run: npx flow check
       - name: Test
         run: npm test -- --verbose
+      - name: Lint
+        run npx eslint .
