C2LC-221: Added flow type definitions for additional packages.  Began fixing/commenting out issues.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "eslintConfig": {
         "extends": "react-app",
         "ignorePatterns": [
+            "flow-typed/",
+            "node_modules/",
             "src/vendor/"
         ],
         "rules": {
