--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,4 +38,4 @@ jobs:
       - name: Test
         run: npm test -- --verbose
       - name: Lint
-        run npx eslint .
+        run: npx eslint .
