C2LC-223: Added 'build' directory to lint ignore.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "ignorePatterns": [
             "flow-typed/",
             "node_modules/",
-            "src/vendor/"
+            "src/vendor/",
+            "build/"
         ],
         "rules": {
             "no-unused-vars": "error",
