--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
     "version": "0.4.0-dev",
     "private": true,
     "dependencies": {
-        "bootstrap": "4.3.1",
+        "bootstrap": "4.5.2",
         "classnames": "2.2.6",
-        "enzyme": "3.10.0",
-        "enzyme-adapter-react-16": "1.15.1",
+        "enzyme": "3.11.0",
+        "enzyme-adapter-react-16": "1.15.4",
         "node-sass": "4.14.1",
         "react": "16.9.0",
-        "react-bootstrap": "1.0.0-beta.16",
+        "react-bootstrap": "1.3.0",
         "react-dom": "16.9.0",
         "react-intl": "3.3.0",
         "react-mic": "12.4.1",
@@ -18,7 +18,7 @@
         "typeface-roboto": "0.0.75"
     },
     "devDependencies": {
-        "flow-bin": "0.125.1"
+        "flow-bin": "0.133.0"
     },
     "scripts": {
         "start": "react-scripts start",
