C2LC-221: Added flow coverage checks to CI configuration.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,3 +39,7 @@ jobs:
         run: npx flow check
       - name: Test
         run: npm test -- --verbose
+      - name: Flow Type Coverage (main)
+        run: npx flow-coverage-report --config .flowcoverage-main
+      - name: Flow Type Coverage (tests)
+        run: npx flow-coverage-report --config .flowcoverage-tests
