--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,8 +38,13 @@ jobs:
       - name: Flow
         run: npx flow check
       - name: Test
-        run: npm test -- --verbose
+        run: npm test -- --verbose --coverage
       - name: Flow Type Coverage (main)
         run: npx flow-coverage-report --config .flowcoverage-main
       - name: Flow Type Coverage (tests)
         run: npx flow-coverage-report --config .flowcoverage-tests
+      - name: Archive Test Code Coverage Report
+        uses: actions/upload-artifact@v2
+        with:
+          name: Test Code Coverage
+          path: coverage/
