--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
             "build/"
         ],
         "rules": {
-            "no-unused-vars": "error",
+            "no-unused-vars": ["error", { "args": "all"}],
             "no-var": "error",
             "prefer-const": "error"
         }
