C2LC-226: Restructured coverage output based on PR feedback.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,15 +39,20 @@ jobs:
         run: npx flow check
       - name: Test
         run: npm test -- --verbose --coverage
-      - name: Flow Type Coverage (HTML report)
-        run: npx flow-coverage-report --config .flowcoverage-all
-      - name: Archive Code Coverage Reports
+      - name: Archive Test Code Coverage Report
         uses: actions/upload-artifact@v2
         with:
-          name: Code Coverage Reports
+          name: Test Code Coverage Report
           path: coverage/
+      - name: Flow Type Coverage (HTML report)
+        run: npx flow-coverage-report --config .flowcoverage-all
+      - name: Archive Flow Type Coverage Report
+        uses: actions/upload-artifact@v2
+        with:
+          name: Flow Type Coverage Report
+          path: flow-coverage/
       - name: Flow Type Coverage (main coverage threshold)
-        run: npx flow-coverage-report --config .flowcoverage-main
+        run: npx flow-coverage-report --config .flowcoverage-main-threshold
       - name: Flow Type Coverage (test coverage threshold)
-        run: npx flow-coverage-report --config .flowcoverage-tests
+        run: npx flow-coverage-report --config .flowcoverage-tests-threshold
 
