C2LC-263: Updated coverage excludes to reflect recent refactor.

--- a/package.json
+++ b/package.json
@@ -49,10 +49,11 @@
             "!src/**/*.test.js",
             "!src/AddModeImage.js",
             "!src/App.js",
-            "!src/AudioManager.js",
+            "!src/AudioManagerImpl.js",
             "!src/DashDriver.js",
             "!src/DeleteModeImage.js",
             "!src/FakeRobotDriver.js",
+            "!src/FakeAudioManager.js",
             "!src/FeatureDetection.js",
             "!src/FocusTrapManager.js",
             "!src/MicMonitor.js",
