--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
             "build/"
         ],
         "rules": {
+            "indent": ["error", 4, {
+                "CallExpression": {"arguments": "off"},
+                "SwitchCase": 1
+            }],
             "no-trailing-spaces": "error",
             "no-unused-vars": "error",
             "no-var": "error",
