--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,4 +57,6 @@ jobs:
         run: npx flow-coverage-report --config .flowcoverage-main-threshold
       - name: Flow Type Coverage (test coverage threshold)
         run: npx flow-coverage-report --config .flowcoverage-tests-threshold
+      - name: Lint Documentation
+        run: npx markdownlint-cli2 "./**/*.md" "#node_modules" "#src/vendor" 
 
